test/negative/invariant5.mli.expected

*******************************
********** Parsed file ********
*******************************
type 'a t = private {
  a: 'a }[@@gospel {| invariant self.a = self.a |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

type 'a t = private {
a: 'a }
  (*@ invariant ...
       *)
File "invariant5.mli", line 2, characters 11-15:
Error: Symbol self not found.
